updated Pro and some HL raid

--- a/index.html
+++ b/index.html
@@ -87,8 +87,44 @@ All tracking resets every day at **04:00 HKT**</p>
 <script>
 // === CONFIGURATION - You can have duplicate URLs ===
 const LINKS = [
-  { label: "Slime", url: "https://game.granbluefantasy.jp/#quest/supporter/400181/4" },
-  { label: "mypage", url: "https://game.granbluefantasy.jp/#mypage" },
+  { label: "島Pro", url: "https://game.granbluefantasy.jp/#quest/supporter/305261/28" },
+  { label: "マグナPro", url: "https://game.granbluefantasy.jp/#quest/supporter/305441/28/0/18" },
+  { label: "プライマルPro", url: "https://game.granbluefantasy.jp/#quest/supporter/305471/28/0/47" },
+  { label: "四大天司Pro", url: "https://game.granbluefantasy.jp/#quest/supporter/305651/28/0/5311" },
+  
+  { label: "マグナHLPro", url: "https://game.granbluefantasy.jp/#quest/supporter/305461/28/0/32" },
+  { label: "レガリアPro", url: "https://game.granbluefantasy.jp/#quest/supporter/305561/28/0/522" },
+  
+  { label: "討滅戦Pro", url: "https://game.granbluefantasy.jp/#quest/supporter/103951/28" },
+  { label: "撃滅戦Pro", url: "https://game.granbluefantasy.jp/#quest/supporter/103991/28" },
+  { label: "エンジェル。ヘイローPro", url: "https://game.granbluefantasy.jp/#quest/supporter/305301/28" },
+  { label: "四大天司の試練Pro", url: "https://game.granbluefantasy.jp/#quest/supporter/104081/28" },
+  { label: "六竜Pro", url: "https://game.granbluefantasy.jp/#quest/supporter/104111/28" },
+  
+  { label: "グランデ", url: "https://game.granbluefantasy.jp/#quest/supporter/301051/1/0/82" },
+  { label: "プロバハ", url: "https://game.granbluefantasy.jp/#quest/supporter/300291/1/0/58" },
+  { label: "アルバハ", url: "https://game.granbluefantasy.jp/#quest/supporter/303131/1/0/133" },
+  { label: "黄龍", url: "https://game.granbluefantasy.jp/#quest/supporter/301671/1/0/6005" },
+  { label: "麒麟", url: "https://game.granbluefantasy.jp/#quest/supporter/301681/1/0/6005" },
+  
+  { label: "ローズクイーン", url: "https://game.granbluefantasy.jp/#quest/supporter/300471/1/0/1204" },
+  
+  { label: "アトゥム", url: "https://game.granbluefantasy.jp/#quest/supporter/305321/1/0/41" },
+  { label: "テフヌト", url: "https://game.granbluefantasy.jp/#quest/supporter/305331/1/0/42" },
+  { label: "ベンヌ", url: "https://game.granbluefantasy.jp/#quest/supporter/305331/1/0/43" },
+  { label: "ラー", url: "https://game.granbluefantasy.jp/#quest/supporter/305351/1/0/44" },
+  { label: "ホルス", url: "https://game.granbluefantasy.jp/#quest/supporter/305361/1/0/45" },
+  { label: "オシリス", url: "https://game.granbluefantasy.jp/#quest/supporter/305371/1/0/46" },
+  
+  { label: "アトゥム2", url: "https://game.granbluefantasy.jp/#quest/supporter/305321/1/0/41" },
+  { label: "テフヌト2", url: "https://game.granbluefantasy.jp/#quest/supporter/305331/1/0/42" },
+  { label: "ベンヌ2", url: "https://game.granbluefantasy.jp/#quest/supporter/305331/1/0/43" },
+  { label: "ラー2", url: "https://game.granbluefantasy.jp/#quest/supporter/305351/1/0/44" },
+  { label: "ホルス2", url: "https://game.granbluefantasy.jp/#quest/supporter/305361/1/0/45" },
+  { label: "オシリス2", url: "https://game.granbluefantasy.jp/#quest/supporter/305371/1/0/46" },
+  
+  { label: "ダーク。ラプチャー", url: "https://game.granbluefantasy.jp/#quest/supporter/303271/1/0/506" },
+  
 ];
 
 // === STORAGE KEYS (updated) ===
@@ -192,4 +228,5 @@ init();
 setInterval(updateResetInfo, 60000); // update countdown every minute
 </script>
 </body>
+
 </html>
